tests/fixtures/negative/subscription_slot_mismatch.wrela
// expect: SEM0035: subscription sub belongs to slot other but executor Worker uses slot worker
module negative.subscription_slot_mismatch

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.topic
use { ExecutorSlot } from machine.x86_64.cpu_state
data TopicIdentity { label: StringLiteral }
class Topic<T> {
    identity: TopicIdentity
    fn subscribe(self, subscriber: ExecutorSlot) -> TopicSubscription<T> { return TopicSubscription<T>(topic = self, subscriber = subscriber) }
}
data TopicSubscription<T> { topic: Topic<T>; subscriber: ExecutorSlot }

module negative.subscription_slot_mismatch.app
use { ExecutorRegistry, SlotIdentity, ExecutorSlot } from machine.x86_64.cpu_state
use { Topic, TopicIdentity, TopicSubscription } from machine.x86_64.topic

executor Worker {
    slot: ExecutorSlot
    input: TopicSubscription<U64>
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let registry = ExecutorRegistry()
        let worker_slot = registry.claim(identity = SlotIdentity(label = "worker"))
        let other_slot = registry.claim(identity = SlotIdentity(label = "other"))
        let topic = Topic<U64>(identity = TopicIdentity(label = "counter"))
        let sub = topic.subscribe(subscriber = other_slot)
        let worker = Worker(slot = worker_slot, input = sub)
        while true {}
    }
}
